--- a/Tests/Innoactive.Creator.TextToSpeech.Tests.asmdef
+++ b/Tests/Innoactive.Creator.TextToSpeech.Tests.asmdef
@@ -1,19 +1,26 @@
 {
     "name": "Innoactive.Creator.TextToSpeech.Tests",
     "references": [
+        "GUID:0acc523941302664db1f4e527237feb3",
+        "GUID:27619889b8ba8c24980f49ee34dbb44a",
         "GUID:c8561f9de838ac04d8feeda695bc572d",
         "GUID:880cbf18a8d0b304e905a848d71cf547",
-        "GUID:0acc523941302664db1f4e527237feb3",
-        "GUID:0acc523941302664db1f4e527237feb3",
         "GUID:42a7f63f1de938c4aacfe96b96e26d88"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
-    "overrideReferences": false,
-    "precompiledReferences": [],
-    "autoReferenced": true,
-    "defineConstraints": [],
+    "overrideReferences": true,
+    "precompiledReferences": [
+        "nunit.framework.dll",
+        "Newtonsoft.Json.dll"
+    ],
+    "autoReferenced": false,
+    "defineConstraints": [
+        "UNITY_INCLUDE_TESTS"
+    ],
     "versionDefines": [],
     "noEngineReferences": false
 }
