made playmode test run again

--- a/Tests/Innoactive.Creator.TextToSpeech.Tests.asmdef
+++ b/Tests/Innoactive.Creator.TextToSpeech.Tests.asmdef
@@ -7,10 +7,24 @@
         "GUID:880cbf18a8d0b304e905a848d71cf547",
         "GUID:42a7f63f1de938c4aacfe96b96e26d88"
     ],
-    "includePlatforms": [
-        "Editor"
+    "includePlatforms": [],
+    "excludePlatforms": [
+        "Android",
+        "Editor",
+        "iOS",
+        "LinuxStandalone64",
+        "Lumin",
+        "macOSStandalone",
+        "PS4",
+        "Stadia",
+        "Switch",
+        "tvOS",
+        "WSA",
+        "WebGL",
+        "WindowsStandalone32",
+        "WindowsStandalone64",
+        "XboxOne"
     ],
-    "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": true,
     "precompiledReferences": [
