ci: added project path parameter for u3d calls

--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -73,7 +73,7 @@ stages:
                   npx -p semantic-release-ado semantic-release
                 workingDirectory: "TextToSpeech-Component/"
               env:
-                GH_TOKEN: "$(GITHUB_TOKEN)"                
+                GH_TOKEN: "$(GITHUB_TOKEN)"
             
             - task: PowerShell@2
               displayName: Fetch version from git
@@ -140,8 +140,8 @@ stages:
               inputs:
                 targetType: 'inline'
                 script: |
-                  u3d run -u $(UnityVersion) -- -logFile $(Build.ArtifactStagingDirectory)/logs/editor_editmode_tests.log -batchmode -runTests -testPlatform editmode -testResults $(System.DefaultWorkingDirectory)\TEST-EditMode.xml
-                  u3d run -u $(UnityVersion) -- -logFile $(Build.ArtifactStagingDirectory)/logs/editor_playmode_tests.log -batchmode -runTests -testPlatform playmode -testResults $(System.DefaultWorkingDirectory)\TEST-PlayMode.xml
+                  u3d run -u $(UnityVersion) -- -projectPath '$(Path.Project)' -logFile $(Build.ArtifactStagingDirectory)/logs/editor_editmode_tests.log -batchmode -runTests -testPlatform editmode -testResults $(System.DefaultWorkingDirectory)\TEST-EditMode.xml
+                  u3d run -u $(UnityVersion) -- -projectPath '$(Path.Project)' -logFile $(Build.ArtifactStagingDirectory)/logs/editor_playmode_tests.log -batchmode -runTests -testPlatform playmode -testResults $(System.DefaultWorkingDirectory)\TEST-PlayMode.xml
 
             - task: PublishTestResults@2
               inputs:
@@ -155,7 +155,7 @@ stages:
                 script: |
                   echo 'Exporting version $(Version)'
                   ((Get-Content -path $(Path.ExportConfig)/$(ExportConfigName) -Raw) -replace '{version}','$(Version)') | Set-Content -Path $(Path.Project)/export-config.json
-                  u3d run -u $(UnityVersion) -- -logFile $(Build.ArtifactStagingDirectory)/logs/editor_export.log -batchmode -quit -executeMethod Innoactive.CreatorEditor.PackageExporter.Export --export-config export-config.json
+                  u3d run -u $(UnityVersion) -- -projectPath '$(Path.Project)' -logFile $(Build.ArtifactStagingDirectory)/logs/editor_export.log -batchmode -quit -executeMethod Innoactive.CreatorEditor.PackageExporter.Export --export-config export-config.json
                   Start-Sleep -s 5
 
             - task: PublishPipelineArtifact@1
@@ -170,7 +170,7 @@ stages:
               condition: always()
               inputs:
                   targetPath: "$(Build.ArtifactStagingDirectory)/logs/"
-                  artifact: "creator-tts-logs"
+                  artifact: "creator-tts-logs-$(System.JobId)"
                   publishLocation: "pipeline"
 
   - stage: Release
@@ -178,7 +178,7 @@ stages:
     dependsOn: 
       - Lint
       - Build
-    condition: and(succeeded(), eq(variables['Build.SourceBranchName'], 'master'))    
+    condition: and(succeeded(), eq(variables['Build.SourceBranchName'], 'master'))
     jobs:
       - job:
         workspace:
