--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -156,7 +156,7 @@ stages:
                 targetType: 'inline'
                 script: |
                   echo 'Exporting version $(Version)'
-                  ((Get-Content -path $(Path.ExportConfig)/$(ExportConfigName) -Raw) -replace '{version}','$v(Version)') | Set-Content -Path $(Path.Project)/export-config.json
+                  ((Get-Content -path $(Path.ExportConfig)/$(ExportConfigName) -Raw) -replace '{version}','v$(Version)') | Set-Content -Path $(Path.Project)/export-config.json
                   u3d run -u $(UnityVersion) -- -projectPath '$(Path.Project)' -logFile $(Build.ArtifactStagingDirectory)/logs/editor_export.log -batchmode -quit -executeMethod Innoactive.CreatorEditor.PackageExporter.Export --export-config export-config.json
                   Start-Sleep -s 5
 
